--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://taraspetrenko04.github.io/struct/",
+  "homepage": "https://taraspetrenko04.github.io/struct_new/",
   "name": "struct",
   "version": "0.1.0",
   "private": true,
